# py-man

./: .gitignore  Cargo.toml  LICENSE  README.es.md  README.md  build-installer.ps1  build.rs  install.sh  package-lock.json  uninstall.ps1
.github/workflows/: release.yml
installer/: main.rs  pvm.iss
npm/: README.md  install.js  package.json  pvm.js
src/: branding.rs  checksum.rs  cli.rs  dirs.rs  i18n.rs  main.rs  releases.rs  setup.rs  shim.rs  validate.rs
src/commands/: default.rs  env.rs  install.rs  language.rs  list.rs  list_remote.rs  mod.rs  uninstall.rs  uninstall_self.rs  use_ver.rs  venv.rs
tests/: GUIDE.md  cli_tests.rs
