[package]
name = "pvm"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "pvm"
path = "src/main.rs"

[[bin]]
name = "pvm-setup"
path = "installer/main.rs"

[dependencies]
zip          = "2"
clap         = { version = "4", features = ["derive"] }
tokio        = { version = "1", features = ["full"] }
reqwest      = { version = "0.12", features = ["stream"] }
indicatif    = "0.17"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
dirs         = "5"
semver       = "1"
anyhow       = "1"
regex        = "1"
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
junction = "1"
