[package]
name = "pvm"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "pvm"
path = "src/main.rs"

[dependencies]
clap         = { version = "4", features = ["derive"] }
colored      = "2"
tokio        = { version = "1", features = ["full"] }
reqwest      = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls", "charset", "http2"] }
indicatif    = "0.17"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
dirs         = "5"
semver       = "1"
anyhow       = "1"
regex        = "1"
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
junction = "1"
zip      = "2"

[target.'cfg(not(windows))'.dependencies]
flate2 = "1"
tar    = "0.4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
assert_cmd   = "2"
predicates   = "3"
tempfile     = "3"
serial_test  = "3"
